--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
     "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:mainnet --verify",
     "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
-    "aave:fork:main": "MAINNET_FORK=true npm run compile && hardhat aave:mainnet",
+    "aave:fork:main": "npm run compile && MAINNET_FORK=true  hardhat aave:mainnet",
     "aave:main:full:migration": "npm run hardhat:main -- aave:mainnet --verify",
     "dev:prettier": "prettier --write .",
     "ci:test": "npm run compile && npm run test",
@@ -60,7 +60,7 @@
     "@openzeppelin/contracts": "3.1.0",
     "@tenderly/hardhat-tenderly": "^1.1.0-beta.3",
     "@typechain/ethers-v4": "1.0.0",
-    "@typechain/ethers-v5": "^1.0.0",
+    "@typechain/ethers-v5": "^2.0.0",
     "@typechain/truffle-v4": "2.0.2",
     "@typechain/truffle-v5": "2.0.2",
     "@typechain/web3-v1": "1.0.0",
@@ -77,7 +77,7 @@
     "eth-sig-util": "2.5.3",
     "ethereum-waffle": "3.0.2",
     "ethereumjs-util": "7.0.2",
-    "ethers": "5.0.8",
+    "ethers": "^5.0.19",
     "globby": "^11.0.1",
     "hardhat": "^2.0.2",
     "hardhat-gas-reporter": "^1.0.0",
@@ -89,13 +89,13 @@
     "pretty-quick": "^2.0.1",
     "solidity-coverage": "0.7.10",
     "temp-hardhat-etherscan": "^2.0.2",
-    "ts-generator": "0.0.8",
+    "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typechain": "2.0.0",
-    "typescript": "^3.9.3"
+    "typechain": "^4.0.0",
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
