--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ deploy-mainnet-fork:
   before_script:
     - docker-compose -f docker-compose.test.yml build
   script:
-    - docker-compose -f docker-compose.test.yml run contracts-env npm aave:fork:main
+    - docker-compose -f docker-compose.test.yml run contracts-env npm run aave:fork:main
   after_script:
     - docker-compose -f docker-compose.test.yml run contracts-env npm run ci:clean
     - docker-compose -f docker-compose.test.yml down
