--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,5 +5,5 @@ services:
       context: ./
       dockerfile: ./Dockerfile_test
     environment:
-      MNEMONIC: ${MNEMONIC}
-      ALCHEMY_KEY: ${ALCHEMY_KEY}
+      - MNEMONIC
+      - ALCHEMY_KEY
