--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "kovan:verify:tokens": "npm run hardhat:kovan verify:tokens -- --pool Aave",
     "ropsten:verify:tokens": "npm run hardhat:ropsten verify:tokens -- --pool Aave",
     "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool Aave",
-    "print-config:fork:mainnet": "MAINNET_FORK=true hardhat print-config:fork"
+    "print-config:fork:mainnet": "MAINNET_FORK=true hardhat print-config:fork",
+    "print-config:kovan": "hardhat --network kovan print-config --pool Aave --data-provider 0xA1901785c29cBd48bfA74e46b67C736b26054fa4"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
