- Added all contributors to package.json

--- a/package.json
+++ b/package.json
@@ -107,12 +107,12 @@
   "author": "Aave",
   "contributors": [
     {
-      "name": "Ernesto Boado",
-      "email": "ernesto@aave.com"
-    },
-    {
       "name": "Emilio Frangella",
       "email": "emilio@aave.com"
+    },
+    {
+      "name": "Ernesto Boado",
+      "email": "ernesto@aave.com"
     },
     {
       "name": "Andrey Kozlov",
@@ -121,6 +121,14 @@
     {
       "name": "David Racero",
       "email": "david.k@aave.com"
+    },
+    {
+      "name": "Pol Sendra",
+      "email": "pol@aave.com"
+    },
+    {
+      "name": "David Truong",
+      "email": "david@aave.com"
     }
   ],
   "license": "AGPLv3",
