--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
     "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:mainnet --verify",
     "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
-    "aave:fork:main": "npm run compile && MAINNET_FORK=true  hardhat aave:mainnet",
+    "aave:fork:main": "npm run compile && MAINNET_FORK=true hardhat aave:mainnet",
+    "uniswap:fork:main": "npm run compile && MAINNET_FORK=true hardhat uniswap:mainnet",
     "aave:main:full:migration": "npm run compile && npm run hardhat:main -- aave:mainnet --verify",
     "aave:main:full:initialize": "npm run compile && MAINNET_FORK=true full:initialize-tokens --pool Aave",
     "dev:prettier": "prettier --write .",
