--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "hardhat:docker": "hardhat --network hardhatevm_docker",
     "compile": "SKIP_LOAD=true hardhat compile",
     "console:fork": "MAINNET_FORK=true hardhat console",
-    "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/*.spec.ts",
+    "test": "npm run compile && TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/*.spec.ts",
     "test-scenarios": "npm run test -- test/__setup.spec.ts test/scenario.spec.ts",
     "test-repay-with-collateral": "hardhat test test/__setup.spec.ts test/repay-with-collateral.spec.ts",
     "test-liquidate-with-collateral": "hardhat test test/__setup.spec.ts test/flash-liquidation-with-collateral.spec.ts",
