Added configs to support tenderly fork rpcs. Added new price feeds addresses. Fix owner signer issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,4 @@ services:
       TENDERLY_PROJECT: ${TENDERLY_PROJECT}
       TENDERLY_USERNAME: ${TENDERLY_USERNAME}
       ALCHEMY_KEY: ${ALCHEMY_KEY}
+      TENDERLY_FORK_ID: ${TENDERLY_FORK_ID}
