Support fork connection.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,4 @@ services:
       TENDERLY_USERNAME: ${TENDERLY_USERNAME}
       ALCHEMY_KEY: ${ALCHEMY_KEY}
       TENDERLY_FORK_ID: ${TENDERLY_FORK_ID}
+      TENDERLY_HEAD_ID: ${TENDERLY_HEAD_ID}
