--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "print-contracts:kovan": "npm run hardhat:kovan -- print-contracts",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
     "print-contracts:ropsten": "npm run hardhat:main -- print-contracts",
-    "dev:deployUIProvider": "hardhat --network kovan deploy-UiPoolDataProvider",
-    "main:deployUIProvider": "hardhat --network main deploy-UiPoolDataProvider",
+    "dev:deployUIProvider": "hardhat --network kovan deploy-UiPoolDataProvider --verify",
+    "main:deployUIProvider": "hardhat --network main deploy-UiPoolDataProvider --verify",
     "matic:deployUIProvider": "hardhat --network matic deploy-UiPoolDataProvider",
     "mumbai:deployUIProvider": "hardhat --network mumbai deploy-UiPoolDataProvider",
     "dev:deployUniswapRepayAdapter": "hardhat --network kovan deploy-UniswapRepayAdapter --provider 0x88757f2f99175387aB4C6a4b3067c77A695b0349 --router 0xfcd87315f0e4067070ade8682fcdbc3006631441 --weth 0xd0a1e359811322d97991e03f863a0c30c2cf029c",
