--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
-    "solidity-coverage": "0.7.10",
+    "solidity-coverage": "^0.7.16",
     "temp-hardhat-etherscan": "^2.0.2",
     "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
